# rust-outbound-2-0

./: spin.toml
http-hello/: Cargo.toml
outbound-http/: Cargo.toml
outbound-http-to-same-app/: Cargo.toml
